<resources>
    <string name="app_name">Discount Locator</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="data_loaded_stores">Stores loaded successfully!</string>
    <string name="data_loaded_discounts">Discounts loaded successfully!</string>
    <string name="store_name">Store name</string>
    <string name="store_description">This is a store description. This description can be very short (even nonexistent) or very long as in this example. This means that the layout should be designed in a such way that it can accept different text lengths.</string>
    <string name="store_logo_description">This image represents store logo.</string>
    <string name="discount_name">Discount name</string>
    <string name="discount_description">This is a discount description. This description can be very short (even nonexistent) or very long as in this example. This means that the layout should be designed in a such way that it can accept different text lengths.</string>
    <string name="q_delete_discount">Are you sure you want to delete discount?</string>
    <string name="no">No, thanks!</string>
    <string name="yes">Yes, sure!</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="loading_from_db">Loading data from local database</string>

    <string name="search">Search</string>
    <string name="search_dialog_title">Search</string>
    <string name="search_dialog_text">What are you looking for?</string>
    <string name="search_hint">Enter search terms</string>
    <string name="search_results_found"> results found</string>

    <string name="gcm_sender_id">552822210206</string>
    <string name="in_app_map_description">This in app product will enable you to see your discounts on the map, relative to your current possition. For more details, see image bellow.</string>
    <string name="in_app_map_buy">Buy for $0.99</string>
</resources>
