<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginStart="0dp"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:textSize="15sp"
    android:textStyle="bold" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/store_logo_description"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="0dp"
            android:textIsSelectable="false"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/store_name" />

        <TextView
            android:id="@+id/store_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="0dp"
            android:textIsSelectable="false"
            android:textSize="14sp"
            android:textStyle="normal"
            android:text="@string/store_description" />

    </LinearLayout>

</LinearLayout>